# zxsc

./: CMakeLists.txt  README.md  make-osx.sh  shell.html
files/: scr.z80
src/: GUI.cpp  GUI.hpp  Main.cpp  Main.hpp  Mem.h  Rom.h  Speccy.h  System.cpp  System.hpp
src/gl/: GL.cpp  GL.hpp
src/sdl/: SDL.cpp  SDL.hpp  SDLMain.cpp  SDLMainWeb.cpp
src/speccy/: Clock.h  Render.cpp  Render.hpp  Rom.h  Speccy.h
